--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
     <link rel="stylesheet" href="css/libs/animate.css">
     <link rel="stylesheet" href="js/plugins/swiper-bundle.min.css">
     <link rel="stylesheet" href="jQuery/jquery2.2.3.min.js">
-    <title>Document</title>
+    <title>Taylor Swift</title>
 </head>
 <body>
-
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Taylor Swift</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <!-- Slide -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -23,24 +47,12 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="img/banner1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="img/banner2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
           </div>
           <div class="carousel-item">
             <img src="img/banner3.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -112,43 +124,57 @@
           </div>        
         </div>
       </section>
+      <hr>
       <!-- information -->
 
       <!-- Card -->
 <section class="container-fulid">
+  <h1 class="wow animate__animated animate__fadeInLeft"><strong>NEWS</strong></h1>
   <div id="card" class="row">
     <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
       <img src="img/card/card1.jpg" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, 
-        reprehenderit delectus? Ipsum iure expedita quam velit dicta reiciendis,
-        enim quis facere error temporibus unde labore nihil blanditiis,
-        eius sunt quia.</p>
+      <p>泰勒絲的「The Eras巡迴演唱會」由《Lover》開場，呼應這個夢幻、繽紛又浪漫的創作時期，泰勒絲在巡演第一天穿上了由Atelier Versace訂製的水鑽馬甲連身衣，透過漸層水藍色與粉色亮片點題，腳上搭配的Christian
+        Louboutin銀色水鑽長靴更是以手工鑲上超過萬顆水鑽，頓時點亮舞台！</p>
     </div>
     <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
       <img src="img/card/card2.jpg" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, 
-        reprehenderit delectus? Ipsum iure expedita quam velit dicta reiciendis,
-        enim quis facere error temporibus unde labore nihil blanditiis,
-        eius sunt quia.</p>
+      <p>去年接受《時代》雜誌專訪時，泰勒絲曾公開分享過與男友 Travis Kelce 如何認識並進一步發展，其實是因為 Travis Kelce 先在 Podcast
+        上提及並稱讚了泰勒絲，兩人因此才有了認識的機會，在那之後便時常出門約會，而當時大眾和媒體都還不知道兩人的關係。</p>
+    </div>
+    <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
+      <img src="img/card/card6.png" alt="">
+      <p>愛情事業兩得意的西洋音樂小歌后泰勒絲（Taylor Swift）才剛於2月7日至2月10日在日本東京舉辦完亞洲巡迴演唱會，為愛趕場的她，在日本開唱結束後一小時搭乘專機返回美國，出席球星男友Travis Kelce
+        在美國時間12月11日晚上舉行的國家美式足球聯盟（NFL）的冠軍戰超級盃（Super Bowl）盛事。</p>
     </div>
     <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
       <img src="img/card/card3.jpg" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, 
-        reprehenderit delectus? Ipsum iure expedita quam velit dicta reiciendis,
-        enim quis facere error temporibus unde labore nihil blanditiis,
-        eius sunt quia.</p>
+      <p>
+        勒絲和肯伊威斯特的恩怨，要從2009年MTV音樂錄影帶大獎開始講起。在頒獎典禮上，當泰勒絲抱著「最佳流行女歌手音樂錄影帶大獎」上台時，這位rapper竟大肆宣揚著碧昂絲的MV才是最棒的！這無疑對獲獎者來說極為不尊重；但時隔6年，在同一個頒獎典禮，肯爺獲得「麥可傑克遜音樂錄影帶先鋒獎（Michael
+        Jackson Video Vanguard Award）」，諷刺的是，當時的頒獎人正是泰勒絲！</p>
     </div>
     <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
       <img src="img/card/card4.jpg" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, 
-        reprehenderit delectus? Ipsum iure expedita quam velit dicta reiciendis,
-        enim quis facere error temporibus unde labore nihil blanditiis,
-        eius sunt quia.</p>
+      <p>流行樂天后泰勒絲（Taylor
+        Swift）的一舉一動都吸引全球粉絲關注，其身價也隨著事業再攀高峰而水漲船高，而泰勒絲私底下也是名「貓奴」，更令人震驚的是她所飼養的其中1隻愛貓的身價竟高達9700萬美元（約30億台幣），甚至比泰勒絲近期高調認愛的男友、美式足球球星凱爾西（Travis
+        Kelce）還高。</p>
+    </div>
+    <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
+      <img src="img/card/card5.png" alt="">
+      <p>The Eras巡迴演唱會中儘管泰勒絲只表演一首來自專輯《Speak
+        Now》的曲目。這張專輯以紫色為主調，象徵著野心、力量與獨立。在獲得葛萊美大獎的《Fearless》專輯後，《Speak
+        Now》是她職涯中的一大轉折點——外界都在等著看：她是真的有實力，還是她不過在初期便江郎才盡的歌手？泰勒絲不僅證明自己的才華，也證實她能以自己的力量完成首張獨立編曲編詞的專輯：《Speak Now》。</p>
     </div>
   </div>
 </section>
 
-      <!-- Card End-->
+<!-- Card End-->
+
+<footer>
+  <div class="footer">
+    <p>上述資訊僅為個人使用，絕無商業用途。</p>
+  </div>
+</footer>
+      
       <script src="js/plugins/swiper-bundle.min.js"></script>
       <script src="jQuery/jquery2.2.3.min.js"></script>
       <script src="js/popper.min.js"></script>
