--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <img src="img/card/card3.jpg" alt="">
       <p>
         勒絲和肯伊威斯特的恩怨，要從2009年MTV音樂錄影帶大獎開始講起。在頒獎典禮上，當泰勒絲抱著「最佳流行女歌手音樂錄影帶大獎」上台時，這位rapper竟大肆宣揚著碧昂絲的MV才是最棒的！這無疑對獲獎者來說極為不尊重；但時隔6年，在同一個頒獎典禮，肯爺獲得「麥可傑克遜音樂錄影帶先鋒獎（Michael
-        Jackson Video Vanguard Award）」，諷刺的是，當時的頒獎人正是泰勒絲！</p>
+        Jackson Video Vanguard Award）」當時的頒獎人正是泰勒絲！</p>
     </div>
     <div class="card col-10 col-sm-12 col-md-10 col-xl-3">
       <img src="img/card/card4.jpg" alt="">
@@ -162,7 +162,7 @@
       <img src="img/card/card5.png" alt="">
       <p>The Eras巡迴演唱會中儘管泰勒絲只表演一首來自專輯《Speak
         Now》的曲目。這張專輯以紫色為主調，象徵著野心、力量與獨立。在獲得葛萊美大獎的《Fearless》專輯後，《Speak
-        Now》是她職涯中的一大轉折點——外界都在等著看：她是真的有實力，還是她不過在初期便江郎才盡的歌手？泰勒絲不僅證明自己的才華，也證實她能以自己的力量完成首張獨立編曲編詞的專輯：《Speak Now》。</p>
+        Now》是她職涯中的一大轉折點——外界都在等著看：她是真的有實力，還是在初期便江郎才盡的歌手？泰勒絲不僅證明自己的才華，也證實能以自己的力量完成首張獨立編曲編詞的專輯：《Speak Now》。</p>
     </div>
   </div>
 </section>
